--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Melquíades Mário",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.6.9"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
